[526d0e4741a57726750faebec9e7894a34840135]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -7494,7 +7494,7 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
       <td>Texto</td>
       <td>3</td>
       <td>Não</td>
-      <td>Moeda na qual o pagamento será feito (BRL / USD / MXN / COP / CLP / ARS / PEN / EUR / PYN / UYU / VEB / VEF / GBP)</td>
+      <td>Moeda na qual o pagamento será feito (BRL)</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Country</code></td>
