[29be411d0bca273c7e1c10f146831adc2f680288]: Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -174,7 +174,7 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
 
 <p>It is worth noting  that in this model, since there is no authentication of the Issuer, the risk of chargeback for fraud remains with the merchant.</p>
 
-<h2 id="payment-flow-3ds-20-with-challenge">Payment Flow 3DS 2.0| With challenge</h2>
+<h2 id="payment-flow-3ds-20--with-challenge">Payment Flow 3DS 2.0 | With challenge</h2>
 
 <p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/pagamento-com-desafio-01_0_-_en.jpg" alt="Flow with challenge 01" />
 <img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/pagamento-com-desafio-02_-_en.jpg" alt="Flow with challenge 02" /></p>
@@ -373,7 +373,7 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
 
 <p>Click here to download the code: <a href="https://bit.ly/2oUaTGD">https://bit.ly/2oUaTGD</a></p>
 
-<p><img src="https://developercielo.github.io/images/exemplo-html.jpg" alt="Fluxo 3DS 2.0" /></p>
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/exemplo-html_-_en.jpg" alt="Fluxo 3DS 2.0" /></p>
 
 <p>Events Description</p>
 
