[35ace10360f8b03879234a1f117ac1336730b3e2]: Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -371,7 +371,7 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
 
 <p>This step contains the <em>script</em> and the mapping of <em>classes</em> implementation responsable to comunicate with the authentication platform from brands and issuers. The example below shows the basic implementation. It is recommended that the snippet is placed at the end of the checkout HTML code:</p>
 
-<p>Click here to download the code: <a href="https://bit.ly/2oUaTGD">https://bit.ly/2oUaTGD</a></p>
+<p>To download the code, <a href="https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/_i18n/pt/_posts/emv3ds/exemplo.html">Click here</a></p>
 
 <p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/images/exemplo-html_-_en.jpg" alt="Fluxo 3DS 2.0" /></p>
 
