--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -135,7 +135,7 @@
 
 <p>Com o objetivo de minimizar o índice de fraude sem prejudicar a taxa de conversão, a indústria de meio de pagamento desenvolveu um novo padrão de autenticação, chamado <strong>EMV 3DS</strong> , ou também chamado de <strong>3DS 2.0</strong>. A nova versão é capaz de analisar dezenas de variáveis que são utilizadas como critérios para determinar se um comprador é de fato o portador cartão, permitindo em alguns casos, a autenticação silenciosa do mesmo (autenticação sem desafio), sem prejuízo à questão do <em>Liability Shift</em> dos estabelecimentos.</p>
 
-<p>Principais benefícios:</p>
+<p><strong>Principais benefícios:</strong></p>
 
 <ul>
   <li>Integração facilitada via Java Script;</li>
