[b60532949d0e3517de442298e56903dd88e1bb8f]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -163,9 +163,20 @@
 
 <h2 id="solution-features">Solution features</h2>
 
-<p>The API Cielo eCommerce solution of the Cielo eCommerce platform was developed with REST technology, which is market standard and also independent of the technology used by our customers. In this way, it is possible to integrate using the most varied programming languages, such as: ASP, ASP. Net, Java, PHP, Ruby, Python, etc.</p>
+<p>The API Cielo eCommerce solution of the Cielo eCommerce platform was developed with REST technology, which is market standard and also independent of the technology used by our customers. In this way, it is possible to integrate using the most varied programming languages, such as:</p>
 
-<p>For examples of these languages, see our conversion tutorial via our <a href="https://developercielo.github.io/Tutorial//Postman"><strong>Postman Tutorial</strong></a></p>
+<ul>
+  <li>ASP</li>
+  <li>Net</li>
+  <li>Java</li>
+  <li>PHP</li>
+  <li>Ruby</li>
+  <li>Python</li>
+</ul>
+
+<blockquote>
+  <p>For examples of these languages, see our conversion tutorial via our <a href="https://developercielo.github.io/Tutorial//Postman"><strong>Postman Tutorial</strong></a></p>
+</blockquote>
 
 <p>Among other features, the attributes that stand out most in the Cielo eCommerce platform:</p>
 
