[d487e6560f43b11015b2819b6c2fe7c4af0ef85c]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -175,7 +175,7 @@
 </ul>
 
 <blockquote>
-  <p>For examples of these languages, see our conversion tutorial via our <a href="https://developercielo.github.io/Tutorial//Postman"><strong>Postman Tutorial</strong></a></p>
+  <p>To get examples in these languages, see our conversion tutorial <a href="https://developercielo.github.io/Tutorial//Postman"><strong>Postman Tutorial</strong></a></p>
 </blockquote>
 
 <p>Among other features, the attributes that stand out most in the Cielo eCommerce platform:</p>
@@ -234,7 +234,7 @@
     </tr>
     <tr>
       <td><strong>Authorization</strong></td>
-      <td>rocess to check whether a purchase can or not be realized with a card. At this point, several checks are done with the card and the carrier (e.g., timely payments, card locks, etc.). It is also at this point that the card limit is sensitized with the transaction value.</td>
+      <td>process to check whether a purchase can or not be realized with a card. At this point, several checks are done with the card and the carrier (e.g., timely payments, card locks, etc.). It is also at this point that the card limit is sensitized with the transaction value.</td>
     </tr>
     <tr>
       <td><strong>Cancellation</strong></td>
@@ -371,6 +371,10 @@
     </tr>
   </tbody>
 </table>
+
+<blockquote>
+  <p>Cards that was issued abroad do not have permission to pay in installments.</p>
+</blockquote>
 
 <h1 id="extended-validation-certificate">Extended Validation Certificate</h1>
 
