[86bf2871d56543b80f7e12161b26c5d63edc10e3]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -216,6 +216,31 @@
   </tbody>
 </table>
 
+<table>
+  <thead>
+    <tr>
+      <th> </th>
+      <th>Methods</th>
+      <th>SandBox</th>
+      <th>Production</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>Transaction request</strong></td>
+      <td><strong>POST</strong> / <strong>PUT</strong></td>
+      <td>https://apisandbox.cieloecommerce.cielo.com.br</td>
+      <td>https://api.cieloecommerce.cielo.com.br/</td>
+    </tr>
+    <tr>
+      <td><strong>Queries</strong></td>
+      <td><strong>GET</strong></td>
+      <td>https://apiquerysandbox.cieloecommerce.cielo.com.br</td>
+      <td>https://apiquery.cieloecommerce.cielo.com.br/</td>
+    </tr>
+  </tbody>
+</table>
+
 <h2 id="glossary">Glossary</h2>
 
 <p>In order to facilitate the understanding, we have listed below a short glossary with the main terms related to eCommerce and also to card and acquiring market:</p>
