[a76a3cb5f2b3ef5ef5d3cb3a6800b23ab5080598]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -557,11 +557,11 @@
 
 <ul>
   <li>No affiliation is required to use Sandbox Cielo.</li>
-  <li>Just access the <a href="https://cadastrosandbox.cieloecommerce.cielo.com.br/"><strong>Sandbox Registration</strong></a> create an accounta.</li>
+  <li>Just access the <a href="https://cadastrosandbox.cieloecommerce.cielo.com.br/"><strong>Sandbox Registration</strong></a> create an account.</li>
   <li>with the registration you will receive a <code class="highlighter-rouge">MerchantId</code> and a <code class="highlighter-rouge">MerchantKey</code>, which are the credentials required for the API methods</li>
 </ul>
 
-<h2 id="integration-toolo-postman">Integration Toolo: POSTMAN</h2>
+<h2 id="integration-tool-postman">Integration Tool: POSTMAN</h2>
 
 <p><strong>Postman</strong> is an API Client that makes it easier for developers to create, share, test, and document APIs. This is done by allowing users to create and save simple and complex HTTP requests, as well as read their responses.</p>
 
@@ -4988,7 +4988,7 @@ Below we specify any existing differences:</p>
   <li>After registering you will receive a MerchantId and a MerchantKey, which are the credentials required for the API methods.</li>
 </ul>
 
-<h3 id="integration-tool-postman">Integration Tool: POSTMAN</h3>
+<h3 id="integration-tool-postman-1">Integration Tool: POSTMAN</h3>
 
 <p><strong>Postman</strong> is an API Client that makes it easier for developers to create, share, test, and document APIs. This is done by allowing users to create and save simple and complex HTTP requests, as well as read their responses.</p>
 
