[a5adaf63671b792f2285498711295f5d5cbcecc8]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -664,6 +664,8 @@ With this means of payment it is possible to simulate the flows of:</p>
 
 <aside class="notice">Tokenization: Transactions in sandbox environment involving tokenization did not work based on test cards. Every card saved at the tokenization is treated as a real card, so it is not used in the simulation process</aside>
 
+<aside class="Warning">Warning: Sandbox return codes are not the same as the ones available in production.</aside>
+
 <h2 id="debit-card---sandbox">Debit card - Sandbox</h2>
 
 <p>Debit cards do not have simulated cards or specific data, such as in the case of a credit card.</p>
