--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -669,9 +669,9 @@ Com esse meio de pagamento é possível simular os fluxos de:</p>
 
 <aside class="notice">Atenção: O ambiente de **sandbox** avalia o formato e o final do cartão, caso um cartão real seja enviado, o resultado da operação será idêntico ao descrito na tabela de cartões de teste.</aside>
 
-<aside class="notice">Tokenização:  transações no ambiente de simulação envolvendo tokenização não funcionaram com base em cartões de teste. Cada cartão salvo na tokenização é tratado como um cartão real, com isso não é usado no processo de simulação.</aside>
+<aside class="notice">Tokenização: transações no ambiente de simulação envolvendo tokenização não funcionaram com base em cartões de teste. Cada cartão salvo na tokenização é tratado como um cartão real, com isso não é usado no processo de simulação.</aside>
 
-<aside class="Warning">Atenção: Os Códigos de retorno em Sandbox não são os mesmos disponiveis em produção</aside>
+<aside class="Warning">Atenção: Os Códigos de retorno em Sandbox não são os mesmos disponiveis em produção.</aside>
 
 <h2 id="cartão-de-débito---sandbox">Cartão de débito - Sandbox</h2>
 
