[2e5caaddd797a5d35951e0e42eee6314511a559b]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -662,9 +662,9 @@ With this means of payment it is possible to simulate the flows of:</p>
 
 <aside class="notice">Warning: The **sandbox** environment evaluates the format and end of the card, if an actual card is sent, the result of the operation will be identical to that described in the test cards table.</aside>
 
-<aside class="notice">Tokenization: Transactions in sandbox environment involving tokenization did not work based on test cards. Every card saved at the tokenization is treated as a real card, so it is not used in the simulation process</aside>
+<aside class="notice">Tokenization: Transactions in sandbox environment involving tokenization did not work based on test cards. Every card saved at the tokenization is treated as a real card, so it is not used in the simulation process.</aside>
 
-<aside class="Warning">Warning: Sandbox return codes are not the same as the ones available in production.</aside>
+<aside class="Warning">Warning: Sandbox return codes are not the same as the ones available in production. </aside>
 
 <h2 id="debit-card---sandbox">Debit card - Sandbox</h2>
 
