--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -772,7 +772,7 @@ Below we specify any existing differences:</p>
 
 <h3 id="creating-a-simple-transaction">Creating a simple transaction</h3>
 
-<p>To create a transaction that will use a credit card, it is necessary to send a request using the <code class="highlighter-rouge">POST</code> method to the Payment feature, as shown. This example covers the minimum of fields required to be submitted for authorization</p>
+<p>To create a transaction that will use a credit card, it is necessary to send a request using the <code class="highlighter-rouge">POST</code> method to the Payment feature, as shown. This example covers the minimum of fields required to be submitted for authorization.</p>
 
 <aside class="notice">Warning: It is not possible to carry out a transaction with its value as (`Amount`) 0.</aside>
 
