--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -729,7 +729,7 @@ Below we specify any existing differences:</p>
 
 <h2 id="credit-card">Credit Card</h2>
 
-<p>For you to enjoy all the features available in our API, it is important that you first understand the concepts involved in processing a credit card transaction.</p>
+<p>To enjoy all the features available in our API, it is important that you first understand the concepts around processing a credit card transaction.</p>
 
 <table>
   <thead>
@@ -741,11 +741,11 @@ Below we specify any existing differences:</p>
   <tbody>
     <tr>
       <td><strong>Authorization</strong></td>
-      <td>The authorization (or pre-authorization) is the main operation in the eCommerce, because through it is that a sale can be realized. Pre-authorization only sensitizes the customer’s limit, but does not yet generate charge for the consumer.</td>
+      <td>The authorization (or pre-authorization) is the main operation in the eCommerce, because through it, the sale can be finished. Pre-authorization only sensitizes the customer’s limit, but still does not generate charge for the consumer.</td>
     </tr>
     <tr>
       <td><strong>Capture</strong></td>
-      <td>When making a pre-authorization, it is necessary to confirm it, so that the charge is effected to the card carrier. Through this operation a pre-authorization is effected, and it can be executed normally within 5 days after the pre-authorization date.</td>
+      <td>When making a pre-authorization, it is necessary to confirm it, so that the charge is effected to the card carrier. It is through this operation a pre-authorization is effected, and it can be executed normally within 5 days after the pre-authorization date.</td>
     </tr>
     <tr>
       <td><strong>Cancellation</strong></td>
@@ -753,11 +753,11 @@ Below we specify any existing differences:</p>
     </tr>
     <tr>
       <td><strong>Authentication</strong></td>
-      <td>The authentication process makes it possible to effective a sale, which will pass through the authentication process of the card issuing bank, thus providing more security for the sale and transferring the risk of fraud to the bank.</td>
+      <td>The authentication process makes it possible to effective a sale, which will pass through the authentication process of the card issuing bank, then providing more security for the sale and transferring the risk of fraud to the bank.</td>
     </tr>
     <tr>
       <td><strong>Protected Card</strong></td>
-      <td>It is a platform that allows secure storage of credit card sensitive data. This data are transformed into an encrypted code named “token”, which can be stored in a database. With the platform, the store can offer features like “1 Click Buy” and “Rettry transaction sending”, always preserving integrity and confidentiality of information.</td>
+      <td>It is a platform that allows secure storage of credit card sensitive data. This data are transformed into an encrypted code named “token”, which can be stored in a database. In the platform, the store can offer features like “1 Click Buying” and “Retry transaction sending”, always preserving integrity and confidentiality of information.</td>
     </tr>
     <tr>
       <td><strong>Anti fraud</strong></td>
@@ -1819,7 +1819,7 @@ Below we specify any existing differences:</p>
   </tbody>
 </table>
 
-<h3 id="creating-a-sale-with-authentication">Creating a sale with Authentication</h3>
+<h3 id="creating-a-authenticated-transaction">Creating a authenticated transaction</h3>
 
 <p>To create a transaction with authentication that will use a credit card, it is necessary to submit a request using the <code class="highlighter-rouge">POST</code> method for the Payment feature as shown.</p>
 
