[6c01a90dff8ad03c184216206f72ad1288beb017]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -2270,7 +2270,7 @@ Bancos Suportados:</p>
 <h3 id="autenticação-débito">Autenticação Débito</h3>
 
 <p>O Cartão de débito por padrão exige que o portador seja direcionado para o ambiente Bancário, onde será avaliada a senha e dados informados pela loja. 
-Existe a opção de não autenticar transações de débito, porem é necessario que o banco emissor do cartão permita tal transação
+Existe a opção de não autenticar transações de débito, porem é necessario que o banco emissor do cartão permita tal transação.
 Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista deve acionar o banco e solicitar a permissão</p>
 
 <p>Em transações de cartão de débito sem autenticação, há limitação de bancos:</p>
