[96619a2fba8ce41b5c017846be7034451e1ba3ce]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -2604,7 +2604,7 @@ Below we specify any existing differences:</p>
 
 <h2 id="electronic-transfer">Electronic Transfer</h2>
 
-<h3 id="creating-a-simple-sransaction">Creating a simple sransaction</h3>
+<h3 id="creating-a-simple-transaction-1">Creating a simple transaction</h3>
 
 <p>To create an electronic transfer sale, it is necessary to make a POST for the Payment feature as shown. This example includes the minimum number of fields required to be sent for authorization.</p>
 
