[1da9ea12614ac27fdcb0a0e88d914271cfe3263d]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -2699,11 +2699,88 @@ Below we specify any existing differences:</p>
       <td>No</td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">Customer.Identity</code></td>
+      <td>Text</td>
+      <td>14</td>
+      <td>Yes</td>
+      <td>Buyer’s RG, CPF or CNPJ number</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.IdentityType</code></td>
+      <td>Text</td>
+      <td>255</td>
+      <td>No</td>
+      <td>Type of identification document of the buyer (CPF or CNPJ)</td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">Customer.Status</code></td>
       <td>Buyer registration status in store (NEW / EXISTING) - Used by fraud analysis</td>
       <td>Text</td>
       <td>255</td>
       <td>No</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Email</code></td>
+      <td>Text</td>
+      <td>255</td>
+      <td>No</td>
+      <td>Buyer’s e-mail</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Address.Street</code></td>
+      <td>Text</td>
+      <td>255</td>
+      <td>No</td>
+      <td>Buyer’s contact address</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Address.Number</code></td>
+      <td>Text</td>
+      <td>15</td>
+      <td>No</td>
+      <td>Buyer’s contact address number</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Address.Complement</code></td>
+      <td>Text</td>
+      <td>50</td>
+      <td>No</td>
+      <td>Buyer’s contact address add-on</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Address.ZipCode</code></td>
+      <td>Text</td>
+      <td>9</td>
+      <td>No</td>
+      <td>Buyer’s contact address ZIP Code</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Address.City</code></td>
+      <td>Text</td>
+      <td>50</td>
+      <td>No</td>
+      <td>Buyer’s contact address city</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Address.State</code></td>
+      <td>Text</td>
+      <td>2</td>
+      <td>No</td>
+      <td>Buyer’s contact address state</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Address.Country</code></td>
+      <td>Text</td>
+      <td>35</td>
+      <td>No</td>
+      <td>Buyer’s contact address country</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Customer.Address.District</code></td>
+      <td>Text</td>
+      <td>35</td>
+      <td>No</td>
+      <td>Buyer’s contact address neighborhood</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Payment.Type</code></td>
