--- a/_i18n/en/_posts/env3ds/exemplo.html
+++ b/_i18n/en/_posts/env3ds/exemplo.html
@@ -31,6 +31,10 @@
 			<label>Amount:</label>
 			<input type="text" size="50" name="amount" class="bpmpi_totalamount" value="1000" />
 		</div>
+                <div>
+                        <label>Installments:</label>
+                        <input type="text" size="2" name="installments" class="bpmpi_installments" value="1" />
+                </div>
 		<div>
 			<label>Payment Method:</label>
 			<select name="paymentMethod" class="bpmpi_paymentmethod">
