[f3ff8d9ff6e6459c8509acac1687e608c3fbdbb9]: Merge pull request #181 from DeveloperCielo/tsaitobraspag-patch-114
Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -564,6 +564,13 @@
       <td>Sim</td>
     </tr>
     <tr>
+      <td>bpmpi_installments</td>
+      <td>Número de parcelas da transação</td>
+      <td>Numérico [até 2 posições]</td>
+      <td>Sim</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
       <td>bpmpi_paymentmethod</td>
       <td>Tipo do cartão a ser autenticado. No caso do cartão múltiplo, deverá especificar um dos tipos, Credit ou Debit</td>
       <td>Credit – Cartão de Crédito<br />Debit – Cartão de Débito</td>
