[3ddf3ba7f0e3439f1a1403dae51cc77831980220]: Merge pull request #182 from DeveloperCielo/tsaitobraspag-patch-115
Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -585,6 +585,14 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
       <td>Yes</td>
     </tr>
     <tr>
+      <td>bpmpi_installments</td>
+      <td>Number of Installments</td>
+      <td>Numeric</td>
+      <td>Yes</td>
+      <td>Yes</td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>bpmpi_paymentmethod</td>
       <td>Card type to be authenticated. If the card has both functions, it is necessary to specify the transaction type.</td>
       <td>String<br />Credit – <em>Credit card</em><br />Debit – <em>Debit card</em></td>
