[3b1cbbed35fe007914bc9fd807e01ab0c68de508]: Merge pull request #186 from DeveloperCielo/tsaitobraspag-patch-119
Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -261,7 +261,7 @@
     <tr>
       <td><strong>PRODUÇÃO</strong></td>
       <td>https://mpi.braspag.com.br</td>
-      <td>(solicitar à equipe de suporte após concluir o desenvolvimento em sandbox)</td>
+      <td>Solicite os dados “ClientID” e “ClientSecret” à equipe de suporte após concluir o desenvolvimento em sandbox. <br />O valor do Authorization deve ser obtido concatenando-se o valor do “ClientID”, sinal de dois-pontos (“:”) e “ClientSecret” (ex. dba3a8db-fa54-40e0-8bab-7bfb9b6f2e2e:D/ilRsfoqHlSUChwAMnlSDefrd7FMsM7cU/vo02REag=) e na sequência, codificar o resultado na base 64. <br />Com isso, será gerado um código alphanumérico que será utilizado na requisição de access token.</td>
     </tr>
   </tbody>
 </table>
