--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -254,14 +254,14 @@
     <tr>
       <td><strong>SANDBOX</strong></td>
       <td>https://mpisandbox.braspag.com.br</td>
-      <td>Basic ZGJhM2E4ZGItZmE1NC00MGUwLThiYWItN2JmYjliNmYyZTJlOkQvaWxSc2ZvcUhsU1VDaHdBTW5seUtkRE5kN0ZNc003Y1Uvdm8wMlJFYWc9</td>
+      <td>Basic <em>(Authorization)</em><br />O valor do Authorization deve ser obtido concatenando-se o valor do “ClientID”, sinal de dois-pontos (“:”) e “ClientSecret”<br />Ex. dba3a8db-fa54-40e0-8bab-7bfb9b6f2e2e:D/ilRsfoqHlSUChwAMnlyKdDNd7FMsM7cU/vo02REag=<br />e na sequência, codificar o resultado na base 64. <br />Com isso, será gerado um código alphanumérico que será utilizado na requisição de access token.</td>
     </tr>
   </tbody>
   <tbody>
     <tr>
       <td><strong>PRODUÇÃO</strong></td>
       <td>https://mpi.braspag.com.br</td>
-      <td>Solicite os dados “ClientID” e “ClientSecret” à equipe de suporte após concluir o desenvolvimento em sandbox. <br />O valor do Authorization deve ser obtido concatenando-se o valor do “ClientID”, sinal de dois-pontos (“:”) e “ClientSecret” <br />Ex. dba3a8db-fa54-40e..:D/ilRsfoqHlSUChwAMnlSDefrd7FMsM7cU/vo02REag= <br />e na sequência, codificar o resultado na base 64. <br />Com isso, será gerado um código alphanumérico que será utilizado na requisição de access token.</td>
+      <td>Solicite os dados “ClientID” e “ClientSecret” à equipe de suporte após concluir o desenvolvimento em sandbox.</td>
     </tr>
   </tbody>
 </table>
