--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -255,14 +255,14 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
     <tr>
       <td><strong>SANDBOX</strong></td>
       <td>https://mpisandbox.braspag.com.br</td>
-      <td>Basic ZGJhM2E4ZGItZmE1NC00MGUwLThiYWItN2JmYjliNmYyZTJlOkQvaWxSc2ZvcUhsU1VDaHdBTW5seUtkRE5kN0ZNc003Y1Uvdm8wMlJFYWc9</td>
+      <td><strong>Basic <em>(Authorization)</em></strong><br />The Authorization must be generated concatenating “ClientID”, colon character (“:”) and “ClientSecret”<br />Ex. dba3a8db-fa54-40e0-8bab-7bfb9b6f2e2e:D/ilRsfoqHlSUChwAMnlyKdDNd7FMsM7cU/vo02REag=<br />after this, encode the result in base 64. <br />Then, the access token will be generated. For test purposes, use these credentials:<br />ClientID: <strong>dba3a8db-fa54-40e0-8bab-7bfb9b6f2e2e</strong><br />ClientSecret: <strong>D/ilRsfoqHlSUChwAMnlyKdDNd7FMsM7cU/vo02REag=</strong></td>
     </tr>
   </tbody>
   <tbody>
     <tr>
       <td><strong>PRODUCTION</strong></td>
       <td>https://mpi.braspag.com.br</td>
-      <td>(Please contact our support team after integrating on sandbox environment)</td>
+      <td>Please contact our support team to generate the “ClientID” and “ClientSecret” after integrating on sandbox environment.</td>
     </tr>
   </tbody>
 </table>
