[9342e6f066cc8467c88ccee1e32548c7bd566be6]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -4322,7 +4322,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
   <li>Somente transações capturadas são pagas pela Cielo ao lojista</li>
 </ul>
 
-<aside class="notice">Atenção: A captura é um processo com prazo de execução. Verifique em sem cadastro cielo qual o limite habilitado para a sua afiliação. Após esse periodo, não é possivel realiza a Captura da transação</aside>
+<aside class="notice">Atenção: A captura é um processo com prazo de execução. Verifique em seu cadastro cielo qual o limite habilitado para a sua afiliação. Após esse periodo, não é possivel realiza a Captura da transação</aside>
 
 <aside class="notice">Atenção: Captura parcial disponível apenas para transações de crédito</aside>
 
